--- a/saved material/extra/Dirac delta function/Dirac delta function.tex
+++ b/saved material/extra/Dirac delta function/Dirac delta function.tex
@@ -81,7 +81,7 @@ All the equalities should be understand under integration.
 \begin{proof_env}
     Add a convergence factor to soft cutoff the divergent integration.
     \begin{equation}
-       \frac{1}{2pi} \int_{-\infty}^{+\infty}e^{ikx}e^{-\epsilon k^2}\, \dd k=\frac{e^{-\frac{x^2}{4\epsilon}}}{2\sqrt{\pi\epsilon}}.
+       \frac{1}{2\pi} \int_{-\infty}^{+\infty}e^{ikx}e^{-\epsilon k^2}\, \dd k=\frac{e^{-\frac{x^2}{4\epsilon}}}{2\sqrt{\pi\epsilon}}.
     \end{equation}
     Then check it like above proof.
 \end{proof_env}
