--- a/exercise/maths/FAA/fundamental algebra and analysis.tex
+++ b/exercise/maths/FAA/fundamental algebra and analysis.tex
@@ -268,6 +268,7 @@ F & F &  F &   T&   T&   T\\ \hline
 \end{enumerate}
 \textbf{Remark.  }$f=-1$ corresponds to the $\mathrm{sgn}$ in 17.
 \section{Rings and Modules}
+\subsection{Rings and Modules}
 \begin{enumerate}
     \item 
         \begin{enumerate}
@@ -281,7 +282,14 @@ F & F &  F &   T&   T&   T\\ \hline
             \item Just verify.
         \end{enumerate}
     \item Let $e_i=(0,\dots,1,\dots,0)$
-    \item 5. Let $$f:\QQ\longrightarrow \QQ$$ be a automorphism. Then $$f(1)=1.$$
+    \item 
+        \begin{enumerate}
+            \item $2x=(2x)^2=2x^2+2x=2x+2x\Rightarrow x=-x.\ a+b=(a+b)^2=a^2+ab+ba+b^2=a+b+ab+ba.\Rightarrow 0=ab+ba=ab-ba\Rightarrow ab=ba.$
+            \item $x(x-1)=0$. If $x\not=0$ and $x\not=1$, then $x$ is a zero divisor.
+            \item Assume there is a boolean ring that has three elements $0,1,x$. If $x-1\not=1$, then $x-1=x$, contradicts to $2x=0$. Hence, $x-1=1$, this contradicts to $1+1=0$. Therefore, $A$ cannot have exactly $3$ elements.
+            \item $1+x=y,1+y=x,x+y=1,xy=0.$
+        \end{enumerate}
+    \item Let $$f:\QQ\longrightarrow \QQ$$ be a automorphism. Then $$f(1)=1.$$
         For any $n\in\NN$, 
         $$f(n)=f\left(\sum_{i=1}^{n}1\right)=\sum_{i=1}^{n}f(1)=nf(1)=n.$$
         $$0=f(0)=f(n+(-n))=f(n)+f(-n)=n+f(-n).$$
@@ -290,6 +298,13 @@ F & F &  F &   T&   T&   T\\ \hline
         $$f(\frac{n}{m})=\frac{n}{m}.$$
         Therefore, for any $x\in \QQ$, $f(x)=x$, which means 
         $$f=\mathrm{Id}_{\QQ}.$$
+    \item  $0$ is the zero element and $1$ is the unit element. Then all the natural number are in the subfield. It is a group with the composition law $+$, by inverse law $-$, and the identity element $0$, all the integers are in the subfield. Similarly, all the rational numbers are in the subfield. So the only subfield of $\QQ$ is $\QQ$.
+    \item 
+        \begin{enumerate}
+            \item $0\in M$. Assume $M\cap\NN_{>0}=\varnothing$, then for any non-zero elements $x,y\in M$, $x+y<0$, that contradicts to $x$ is invertible.
+            \item If there exists a element equals $kd+m,k\in \ZZ,m\in\interval{1}{d-1} $, then $kd+m+k(-d)=m<d\in M$. Contradiction!
+            \item By (2), $M\subseteq d\ZZ$. For any $nd\in d\ZZ, nd=\underset{n \text{ copies}}{\underbrace{d+d+\dots+d}}\in d\ZZ$. So $d\ZZ\subseteq M$. Therefore, $M=d\ZZ$.
+        \end{enumerate}
     \item 10.
         \begin{enumerate}
             \item $$\left(\sum_{n\in \NN}a_nT^n\right)\dagger \left(\sum_{n\in \NN}b_nT^n\right)=\sum_{n\in \NN}(a_n+b_n)T^n$$
