--- a/exercise/physics/Quantum Mechanics/HW3/HW3.tex
+++ b/exercise/physics/Quantum Mechanics/HW3/HW3.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\newcommand{\mydate}{September 16, 2025}
+\newcommand{\mydate}{September 23, 2025}
 \newcommand{\mytitle}{QM HW3}
 \title{\textbf{\mytitle}}
 \author{Jiete XUE}
@@ -97,5 +97,186 @@
         \begin{equation}
             \boxed{\sqrt{\Delta x^2}\sqrt{\Delta p^2}=\hbar \sqrt{\frac{n^2\pi^2}{12}-\frac{1}{2}}\ge\hbar\sqrt{\frac{\pi^2}{12}-\frac{1}{2}}>\frac{\hbar}{2}}.
         \end{equation}
+\end{problem}
+\begin{problem}[$\delta$-function]
+    (1) Easy to check that 
+    \begin{equation}
+        \lim_{a\rightarrow0}\frac{1}{\pi}\frac{a}{x^2+a^2}=\lim_{a\rightarrow0}\frac{1}{a\sqrt{\pi}}e^{-\frac{x^2}{a^2}}=\left\{\begin{matrix}
+            0&,x\not=0\\
+            +\infty&,x=0
+        \end{matrix}\ .\right.
+    \end{equation}
+    \begin{equation}
+        \int_{-\epsilon}^{\epsilon}\frac{a}{x^2+a^2}\, \dd{x}=2\arctan(\frac{\epsilon}{a}).
+    \end{equation}
+    \begin{equation}
+        \lim_{a\rightarrow0}\frac{2}{\pi}\arctan(\frac{\epsilon}{a})=1.
+    \end{equation}
+    \begin{equation}
+        \lim_{a\rightarrow0}\frac{1}{a\sqrt{\pi}}\int_{-\epsilon}^{\epsilon}e^{-\frac{x^2}{a^2}}\, \dd{x}=\frac{\Gamma(\frac{1}{2})}{\sqrt{\pi}}=1.
+    \end{equation}
+    (2) \begin{equation}
+        \frac{1}{x\pm i\epsilon}=\frac{x}{x^2+\epsilon^2}\mp\frac{i\epsilon}{x^2+\epsilon^2}.
+    \end{equation}
+    $\frac{x}{x^2+\epsilon^2}$ is an odd function, in the interval where $\left|x\right|<\epsilon$, it contributes $O(\epsilon)$. Once $\lim_{\epsilon\rightarrow0}\frac{x}{x^2+\epsilon^2}=\frac{1}{x}$ and by (1), we obtain
+    \begin{equation}
+        \boxed{\frac{1}{x\pm i\epsilon}=\mathcal{P}\left(\frac{1}{x}\right)\mp i\pi\delta(x).}
+    \end{equation}
+    (3) Let $A:=\{x_n\mid g(x_n)=0,g'(x_n)\not=0\}$. Around $x=x_n$,
+    \begin{equation}
+        g(x)=g(x_n)+g'(x_n)(x-x_n)=g'(x_n)(x-x_n).
+    \end{equation}
+    Thus, 
+    \begin{equation}
+        \delta[g(x)]=\delta(\sum_{x_n\in A}g'(x_n)(x-x_n))=\sum_{x_n\in A}\delta[g'(x_n)(x-x_n)].
+    \end{equation}
+    By $\delta(ax)=\frac{\delta(x)}{\left|a\right|}\ (a\not=0)$,
+    \begin{equation}
+        \boxed{\delta[g(x)]=\sum_{x_n\in A}\frac{\delta(x-x_n)}{\left|g'(x_n)\right|}.}
+    \end{equation}
+    In particular, 
+    \begin{equation}
+        \boxed{\delta(x^2-a^2)=\frac{\delta(x-a)+\delta(x+a)}{2a}.}
+    \end{equation}
+    (4) \begin{align}
+        &\int_{-\infty}^{\infty}\frac{\dd}{\dd{x}}\left[\delta(x-a)\right]\left(x f(x)\right)\, \dd{x}\\
+        =&\left.\delta(x-a)xf(x)\right|_{-\infty}^{\infty}-\int_{-\infty}^{\infty}\delta(x-a)\left[f(x)+xf'(x)\right]\, \dd{x}\\
+        =&f(a)+af'(a).
+    \end{align}
+    \begin{align}
+        &\int_{-\infty}^{\infty}\frac{\dd^2}{\dd{x}^2}\left[\delta(x-a)\right]\left(x^2 f(x)\right)\, \dd{x}\\
+        =&\int_{-\infty}^{\infty}-\frac{\dd}{\dd{x}}\left[\delta(x-a)\right]\frac{\dd}{\dd{x}}\left[x^2 f(x)\right]\, \dd{x}\\
+        =&\int_{-\infty}^{\infty}\delta(x-a)\frac{\dd^2}{\dd{x}^2}\left[x^2 f(x)\right]\, \dd{x}\\
+        =&a^2f''(a)+4af'(a)+2f(a).
+    \end{align}
+\end{problem}
+\begin{problem}[Momentum representation]
+    (1)\begin{equation}
+        \bra{x}\hat{p}^2\ket{\psi}=\bra{x}\hat{p}\left(\hat{p}\ket{\psi}\right)=-i\hbar\bra{x}\hat{p}\ket{\psi}=-\hbar^2\psi(x).
+    \end{equation}
+    (2) \begin{equation}
+        \bra{x}\hat{H}\ket{\psi}=\bra{x}\hat{p}^2/2m+\hat{V}(x)\ket{\psi}=\left(-\frac{\hbar^2}{2m}\frac{\dd^2}{\dd{x}^2}+\frac{1}{2}m\omega^2\right)\psi(x).
+    \end{equation}
+    (3) \begin{equation}
+        \bra{p}\hat{x}\ket{\psi}=\int\dd{p'}\bra{p}\hat{x}\ket{p'}\braket{p'}{\psi}
+    \end{equation}
+    \begin{equation}
+        \bra{p}\hat{x}\ket{p'}=i\hbar\frac{\pa}{\pa p}\delta(p-p')=-i\hbar\frac{\pa}{\pa p'}\delta(p-p').
+    \end{equation}
+    Similar to Problem 2-(4),
+    \begin{equation}
+        \bra{p}\hat{x}\ket{\psi}=i\hbar\frac{\pa}{\pa p}\psi(p).
+    \end{equation}
+    (4) \begin{align}
+        \bra{p}H\ket{\psi}=&\int\dd{p'}\bra{p}\frac{\hat{p^2}}{2m}\ket{p'}\bra{p'}\ket{\psi}+\frac{1}{2}m\omega^2\bra{p}\hat{x}^2\ket{\psi}\notag\\
+        =&\int{\dd{p'}}\frac{p^2}{2m}\delta(p-p')\psi(p)-\frac{1}{2}m\omega^2\hbar^2\frac{\dd^2}{\dd{p}^2}\psi(p)\notag\\
+        =&\left[\frac{p^2}{2m}-\frac{1}{2}m\omega^2\hbar^2\frac{\dd^2}{\dd{p}^2}\right]\psi(p).
+    \end{align}
+\end{problem}
+\begin{problem}[Orbital angular momentum]\label{4}
+    (1) \begin{align}
+        [L_i,L_j]=&[\epsilon_{imn}x_mp_n,\epsilon_{jkl}x_kp_l]\notag\\
+        =&\epsilon_{imn}\epsilon_{jkl}\left(x_mx_k[p_n,p_l]+x_m[p_n,x_k]p_l+x_k[x_m,p_l]p_n+[x_m,x_k]p_lp_n\right)\notag\\
+        =&i\hbar\epsilon_{imn}\epsilon_{jln}(x_mp_l-x_lp_m)\notag\\
+        =&i\hbar (x_ip_j-x_jp_i)\notag\\
+        =&i\hbar \epsilon_{ijk}\epsilon_{kmn}x_mp_n\notag\\
+        =&i\hbar \epsilon_{ijk}L_k.
+    \end{align}
+    \begin{equation}
+        [L_jL_j,L_i]=\{L_j,[L_j,L_i]\}=i\hbar\epsilon_{jik}\{L_j,L_k\}=0.
+    \end{equation}
+    (2) \begin{equation}
+        [L_i,x_j]=\epsilon_{imn}\left(x_m[p_n,x_j]+[x_m,x_j]p_n\right)=\epsilon_{imn}\left(-i\hbar x_m\delta_{nj}\right)=i\hbar\epsilon_{ijk}x_k.
+    \end{equation}
+    \begin{equation}
+        [L_i,p_j]=\epsilon_{imn}\left(x_m[p_n,p_j]+[x_m,p_j]p_n\right)=\epsilon_{imn}\left(i\hbar p_n\delta_{mj}\right)=i\hbar\epsilon_{ijk}p_k.
+    \end{equation}
+    (3) \begin{equation}
+        [L_i,x_j x_j]=\{x_j,[L_i,x_j]\}=i\hbar\epsilon_{ijk}\{x_j,x_k\}=0.
+    \end{equation}
+    The last equality holds since $\epsilon_{ijk}$ is antisymmetric and $\{x_j,x_k\}$ is symmetric. Similarly,
+    \begin{equation}
+        [L_i,p_j p_j]=\{p_j,[L_i,p_j]\}=i\hbar\epsilon_{ijk}\{p_j,p_k\}=0.
+    \end{equation}
+    (4) In coordinate representation, 
+    \begin{equation}
+        L_i=i\hbar\epsilon_{ijk}x_j\frac{\dd}{\dd{x_k}}.
+    \end{equation}
+    In momentum representation,
+    \begin{equation}
+        L_i=i\hbar\epsilon_{ijk}p_k\frac{\dd}{\dd{p_j}}.
+    \end{equation}
+\end{problem}
+\begin{problem}[Complete set of Mechanical variables]
+    We have the fact that 
+    \begin{equation}
+        [A,f(B)]=\frac{\pa f(B)}{\pa B}[A,B].
+    \end{equation}
+    if $[A,B]$ is communicative with any operator.
+    \begin{equation}
+        H=\frac{p^2}{2m}-\frac{e^2}{r}
+    \end{equation}
+    By Problem ~\ref{4}, we have
+    \begin{equation}
+        [L_i,H]=\frac{[L_i,p^2]}{2m}-e^2\left[L_i,\frac{1}{\sqrt{r^2}}\right]=0.
+    \end{equation}
+    \begin{align}
+        [L^2,H]=&\frac{[L^2,p^2]}{2m}-e^2\left[L^2,\frac{1}{\sqrt{r^2}}\right]\notag\\
+        =&\frac{\{L_i,[L_i,p^2]\}}{2m}-e^2\{L_i,[L_i,\frac{1}{\sqrt{r^2}}]\}\notag\\
+        =&0.
+    \end{align}
+    Therefore $L_i,L^2$ are compatible with $H$.
+\end{problem}
+\begin{problem}[Gaussian and uncertainty principle]
+     Uniform probability distribution:
+    \begin{equation}
+        \int_{-\infty}^{+\infty}\dd{x}\psi^*(x)\psi(x)=AA^*\frac{\Gamma\left(\frac{1}{2}\right)}{\left(l^{-2}\right)^{\frac{1}{2}}}=1.
+    \end{equation}
+    So,
+    \begin{equation}
+        \boxed{A=\sqrt{\frac{1}{\sqrt{\pi l}}},}
+    \end{equation}
+    if we choose a positive real number as the coefficient.
+    \newline
+    (1) By the symmetry, easy to find 
+    \begin{equation}
+        \expval{x}=\expval{p}=0.
+    \end{equation}
+    Then,
+    \begin{align}
+        \expval{(\Delta x)^2}=\expval{x^2}=&\int_{-\infty}^{+\infty}\dd{x}\psi^*(x)x^2\psi(x)\notag\\
+        =&\int_{-\infty}^{+\infty}A^2e^{-\frac{x^2}{l^2}}x^2\dd{x}\notag\\
+        =&A^2l^3\Gamma\left(\frac{3}{2}\right)\notag\\
+        =&\boxed{\frac{1}{2}l^2}.
+    \end{align}
+    \begin{align}
+        \expval{\left(\Delta p\right)^2}=\expval{p^2}=&\int_{-\infty}^{+\infty}\dd{x}\psi^*(x)p^2\psi(x)\notag\\
+        =&\int_{-\infty}^{+\infty}A^2e^{-\frac{x^2}{2l^2}}\left(-\hbar^2\frac{\dd^2}{\dd{x^2}}\right)e^{-\frac{x^2}{2l^2}}\dd{x}\notag\\
+        =&\frac{A^2\hbar^2}{l}\Gamma\left(\frac{3}{2}\right)\notag\\
+        =&\boxed{\frac{\hbar^2}{2l^2}}.
+    \end{align}
+    Hence, 
+    \begin{equation}
+        \boxed{\sqrt{\expval{\left(\Delta x\right)^2}}\sqrt{\expval{\left(\Delta p\right)^2}}=\frac{\hbar}{2}.}
+    \end{equation}
+    It reaches the lower bound of the uncertainty principle.
+    \newline
+    (2)\begin{equation}
+        \psi(p)=\frac{1}{\sqrt{2\pi\hbar}}\int_{-\infty}^{+\infty}\dd{x}\psi(x)e^{-i\frac{px}{\hbar}}=\frac{Al}{\sqrt{\hbar}}e^{-\frac{p^2l^2}{2\hbar^2}}.
+    \end{equation}
+    \begin{align}
+       \expval{\left(\Delta p\right)^2}=\expval{p^2}=&\int_{-\infty}^{+\infty}\dd{p}\psi^*(p)p^2\psi(p)\notag\\ 
+       =&\frac{A^2l^2}{\hbar}\frac{\hbar^3}{l^3}\Gamma\left(\frac{3}{2}\right)\notag\\
+       =&\boxed{\frac{\hbar^2}{2l^2}}.
+    \end{align}
+    \begin{align}
+        \expval{\left(\Delta x\right)^2}=\expval{x^2}=&\int_{-\infty}^{+\infty}\dd{p}\psi^*(p)x^2\psi(p)\notag\\
+        =&\int_{-\infty}^{+\infty}\frac{A^2l^2}{\hbar}e^{-\frac{p^2l^2}{2\hbar^2}}\left(-\hbar^2\frac{\dd^2}{\dd{p^2}}\right)´e^{-\frac{p^2l^2}{2\hbar^2}}\dd{p}\notag\\
+        =&\boxed{\frac{1}{2}l^2}.
+    \end{align}
+    Still,
+    \begin{equation}
+        \boxed{\sqrt{\expval{\left(\Delta x\right)^2}}\sqrt{\expval{\left(\Delta p\right)^2}}=\frac{\hbar}{2}.}
+    \end{equation}
 \end{problem}
 \end{document}
